r19-mod-6.7
-BUGFIX: Messages sent by core logging are missing after preview refresh.

r19-mod-6.6
-BUGFIX: Previewer does not launch.
-Allow all VS versions with API4.
-Remove option that reloads script from disk before evaluation.
-Add option to periodically reload script from disk to sync with external changes.
-Add an asterisk in preview window title that indicates change in text editor.
-Add info texts to certain reserved frame props when displayed.
-Improve error handling of the previewer.
-Better sync output frame numbers by timestamp.

r19-mod-6.5
-Use same vapoursynth library as used for script evaluation for plugin list.

r19-mod-6.4
-BUGFIX: Filter logs are not shown before script is evaluated.
-BUGFIX: VS messages sent from core are duplicated.
-BUGFIX: Each frame from script is requested twice (no influence in performance).
-BUGFIX: Loading vsscript library from VS R66 portable directory fails.
-BUGFIX: output nodes #10-#19 are not properly cleared.
Add audio playback (Windows only).
Add options to set output syncing mode.
Add core cache usage data in status bar.
2020_CL option is removed from preview advanced settings.

r19-mod-6.3
-BUGFIX: On Linux the previewer refuses to quit.
-In Windows 10 and later console window can show colored text (with ANSI escape sequences).
-Add option to hide (VS and Qt) debug messages.
-Add option to set dither type.
-Show _AbsoluteTime frame props on title of preview panel.
-Do not load chapter for VFR clips.
-Add hotkey in preview panel for jumping to frame by frame number.

r19-mod-6.2
-BUGFIX: Encoding CLI won't start in Linux.
-BUGFIX: Script is not loaded when file path encoding is not UTF-8.
-VSEditor is a GUI app again with an option to toggle console window.
-Adapt to Windows dark theme.
-Offer qdarkstyle theme for all platforms.

r19-mod-6.1
-BUGFIX: Memory leak when closing preview window (regression from mod-6).
-Support switching to output indices 10-19.